Tue Dec  5 00:44:07 CET 2006 Christian Anthon <anthon@kiku.dk>

	* common.h, configure.in, dice.c, eval.c, export.c, gnubg.c,
	gtkchequer.c, gtkcube.c, gtkexport.c, gtkgame.c, gtkmet.c,
	gtkmovefilter.c, gtkrace.c, gtktexi.c, gtktheory.c, osr.c, path.c,
	render.c, rollout.c, lib/Makefile.am, lib/buffer.c, lib/neuralnet.c:
	alloca cleanup (we allways have g_alloca).

Mon Dec  4 10:10:29 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gtkoptions.c: hide sound options when compile without USE_SOUND

Sat Dec  2 21:52:04 CET 2006 Christian Anthon <anthon@kiku.dk>

	* rollout.c, progress.c: Disable view rollout statistics after
	close/reopen. Add drops to won games in rollout statistics.

Thu Nov 30 23:43:03 CET 2006 Christian Anthon <anthon@kiku.dk>

	* eval.c, gtkgame.c: remove meaningless data from evaluation window
	and fix window size

Thu Nov 30 22:17:24 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gtkwindows.c: fix sizing problem in messages window

Thu Nov 30 20:14:05 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gtkoptions.c: fix gtk sizing problem in sound options.

Tue Nov 28 23:59:09 CET 2006  Christian Anthon <anthon@kiku.dk>

	* sound.c: cleanup of play_file

Sun Nov 26 21:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkoptions.c (mainly): Selectable sound files (in gui)

Sun Nov 26 16:59:28 CET 2006 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gnubg.c, gtkfile.c, import.c, import.h: "import gam",
	"import party" and "import empire", respectively imports, jellyfish .gam,
	partygammon .gam and gammonempire .gam. 

Sun Nov 26 16:24:30 CET 2006 Christian Anthon <anthon@kiku.dk>

	* gtkfile.c: Default folders on win32

Sat Nov 25 17:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* import.c: First try at PartyGammon import
		(based on convert-to-mat script by gunnar bluth and achim mueller)

Thu Nov 23 18:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkfile.c: Add warning if trying to import PartyGammon game files
