@@ -180,7 +180,6 @@ AC_DEFINE(socklen_t,int, [Define to `int' if <sys/socket.h> does not define.])
 
 dnl Checks for library functions.
 AC_FUNC_MMAP
-AC_FUNC_VPRINTF
 AC_CHECK_FUNCS(sigaction sigvec,break)
 AC_CHECK_FUNCS(sigprocmask sigblock,break)
 AC_CHECK_FUNCS(fork fstat getdtablesize getlogin getpwuid gettimeofday isatty memmove random readv select setvbuf strchr setpriority nl_langinfo usleep)
