@@ -572,7 +572,7 @@ static void ScanErr( void *pv, const char *msg, ... )
     va_list args;
 
     va_start(args, msg);
-    vprintf(msg, args);
+    g_vprintf(msg, args);
     va_end(args);
 #endif
 }
@@ -690,7 +690,7 @@ static void ParseError( void *pv, const char *msg, ... )
     va_list args;
 
     va_start(args, msg);
-    vprintf(msg, args);
+    g_vprintf(msg, args);
     va_end(args);
 #endif
 }
